nes-systests/systest/tests/testdata/errors/schema/FieldNameDifference.dummy
Source stream UINT64 id UINT64 value INLINE
1,2

SINK CORRECT_SINK UINT64 stream$id
SELECT id FROM stream INTO CORRECT_SINK
----
1

SINK INCORRECT_SINK UINT64 stream$value
SELECT id FROM stream INTO INCORRECT_SINK
----
1
